--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -19,5 +19,6 @@ jobs:
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: make test
       run: |
-        make test -C calculator/
-        valgrind ./calculator/test/test_calculator.c
+        make test 
+        valgrind ./build/Test_Calculator.out
+
