--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -19,6 +19,5 @@ jobs:
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: make test
       run: |
-        make test -C Activit2/calculator/
-        valgrind ./build/Test_Calculator.out
-
+        make test -C Activity2/calculator/
+        valgrind  ./calculator/build/Test_Calculator.out
